# piecewise-taylor-regression

./: Idea.md  LICENSE  README.md  pyproject.toml
examples/: simple_usage.py
taylor_regression/: __init__.py  core.py
tests/: Piecewise_test.py  TaylorRegression_test.py
